--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,7 +58,8 @@
             app:layout_constraintTop_toBottomOf="@id/search_view_home"
             android:layout_marginTop="30dp"
             android:layout_marginStart="18dp"
-            android:layout_marginEnd="18dp"/>
+            android:layout_marginEnd="18dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
