--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,6 +51,7 @@
             app:layout_constraintTop_toBottomOf="@id/imv_change_mode"/>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_word"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
