send word id from HomeFragment.kt by safeArgs

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,5 +26,11 @@
         android:id="@+id/detailFragment"
         android:name="com.example.dictionary.view.DetailFragment"
         android:label="fragment_detail"
-        tools:layout="@layout/fragment_detail" />
+        tools:layout="@layout/fragment_detail" >
+        <argument
+            android:name="wordArg"
+            app:argType="integer"
+            android:defaultValue="1"
+             />
+    </fragment>
 </navigation>
