--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -45,7 +45,6 @@
             android:id="@+id/search_view_home"
             style="@style/txv_home_style"
             android:minHeight="54dp"
-            android:background="@drawable/bg_circle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imv_change_mode"/>
@@ -54,13 +53,13 @@
             android:id="@+id/recycler_word"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/search_view_home"
-            android:layout_marginTop="30dp"
             android:layout_marginStart="18dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="18dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/search_view_home" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
