--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,7 +21,12 @@
         android:id="@+id/addWordFragment"
         android:name="com.example.dictionary.view.AddWordFragment"
         android:label="fragment_add_word"
-        tools:layout="@layout/fragment_add_word" />
+        tools:layout="@layout/fragment_add_word" >
+        <argument
+            android:name="wordId"
+            app:argType="integer"
+            android:defaultValue="1" />
+    </fragment>
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.example.dictionary.view.DetailFragment"
@@ -32,5 +37,8 @@
             app:argType="integer"
             android:defaultValue="1"
              />
+        <action
+            android:id="@+id/action_detailFragment_to_addWordFragment"
+            app:destination="@id/addWordFragment" />
     </fragment>
 </navigation>
