--- a/app/src/main/res/drawable/bg_circle.xml
+++ b/app/src/main/res/drawable/bg_circle.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#F3E5F5"
-        android:centerColor="@color/purple_200"
-        android:endColor="@color/purple_700"
+        android:startColor="#eEFEFE"
+        android:centerColor="#dddddd"
+        android:endColor="#aaaaaa"
         android:angle="270"/>
     <corners
         android:radius="10dp"/>
