add click listener buttons in AddWordFragment.kt

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.HomeFragment">
+
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
 
 
 
@@ -12,42 +19,45 @@
             android:id="@+id/txv_fa_en_left"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:minHeight="30dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/imv_change_mode"
-            android:text="@string/english"
             android:layout_margin="10dp"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:minHeight="30dp"
+            android:text="@string/english"
+            app:layout_constraintEnd_toStartOf="@id/imv_change_mode"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/imv_change_mode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:src="@drawable/ic_baseline_sync_alt_24"
-            app:layout_constraintStart_toEndOf="@id/txv_fa_en_left"
             app:layout_constraintEnd_toStartOf="@id/txv_fa_en_right"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_margin="10dp"/>
+            app:layout_constraintStart_toEndOf="@id/txv_fa_en_left"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txv_fa_en_right"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:minHeight="30dp"
+            android:layout_margin="10dp"
             android:gravity="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/imv_change_mode"
+            android:minHeight="30dp"
             android:text="@string/persian"
-            android:layout_margin="10dp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imv_change_mode"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <SearchView
             android:id="@+id/search_view_home"
             style="@style/txv_home_style"
             android:minHeight="54dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/bg_circle"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imv_change_mode"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imv_change_mode" />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_word"
@@ -57,21 +67,32 @@
             android:layout_marginTop="30dp"
             android:layout_marginEnd="18dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toTopOf="@+id/fab_add_word"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/search_view_home" />
+            app:layout_constraintTop_toBottomOf="@id/search_view_home"
+            app:layout_constraintVertical_bias="0.120000005" />
 
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_add_word"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="16dp"
-        android:src="@drawable/add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:contentDescription="@string/detail" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_add_word"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="16dp"
+            android:contentDescription="@string/detail"
+            android:src="@drawable/add"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.9" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
