--- a/app/src/main/res/layout/fragment_add_word.xml
+++ b/app/src/main/res/layout/fragment_add_word.xml
@@ -33,6 +33,13 @@
         android:layout_height="wrap_content"
         android:hint="@string/synonyms"
         />
+
+    <EditText
+        android:id="@+id/edt_add_link"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/link"
+        />
     <Button
         android:id="@+id/btn_save_word"
         android:layout_width="match_parent"
