--- a/app/src/main/res/layout-land/fragment_home.xml
+++ b/app/src/main/res/layout-land/fragment_home.xml
@@ -42,7 +42,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <SearchView
-            android:id="@+id/search_view_home"
+            android:id="@+id/search_edtField_home"
             style="@style/txv_home_style"
             android:background="@drawable/bg_circle"
             android:minHeight="54dp"
@@ -57,7 +57,7 @@
             android:layout_height="52dp"
             android:text="@string/english"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/search_view_home" />
+            app:layout_constraintTop_toBottomOf="@id/search_edtField_home" />
 
         <TextView
             android:id="@+id/txv_fa"
@@ -68,7 +68,7 @@
             android:text="@string/persian"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txv_en"
-            app:layout_constraintTop_toBottomOf="@+id/search_view_home" />
+            app:layout_constraintTop_toBottomOf="@+id/search_edtField_home" />
 
         <TextView
             android:id="@+id/txv_synonyms"
